Fixed CSS issue with spacing at bottom of the page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
+
 .App {
   text-align: center;
   margin-bottom: 0;
-
-  /* width: 100%;
   height: 100%;
-   */
+  width: 100%;
+  
   font-family: 'Merienda', cursive;
   background-image: url('https://media4.giphy.com/media/ITRemFlr5tS39AzQUL/giphy.gif?cid=ecf05e47d1ipf4yunfxuahske1ayo186rmyt9qs27n93pkrb&rid=giphy.gif&ct=g');
   background-size: cover;
@@ -32,9 +32,10 @@
 }
 
 .Home{
-  height: 100%;
+  height: 92vh;
   width: 100%;
   margin-top: 5%;
+  margin-bottom: 0;
 
 }
 
@@ -46,7 +47,7 @@
   transition-delay: 2s;
   /* border-style: inset; */
   width: 100%;
-  height: 100%;
+
   background-color: rgba(176, 191, 205, 0.6);
   border-top-style: ridge;
   border-top-width: 2px;
@@ -115,8 +116,8 @@
 
 #footer{
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: 27.5vh;
+
   margin: 0;
   margin-bottom: 0%;
   background-color: rgb(250, 250, 250);
